# diem_sgx_playground

./: .gitignore  .gitmodules  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Enclave.config.dev.xml  Enclave.config.prod.xml  Enclave.edl  Makefile
enclave/src/: lib.rs
