[package]
name = "enclave-app"
version = "1.0.0"
authors = ["jasl"]

[lib]
name = "enclaveapp"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace", "thread"] }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
